Add custom javascript (client.js) Use jQuery getJSON() method to request data

--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
   
   <!-- jQuery framework -->
   <script src="http://code.jquery.com/jquery-3.3.1.min.js"></script>
+  <!-- custom javascript -->
+  <script src="client.js"></script>
 </body>
 </html>
