--- a/index.html
+++ b/index.html
@@ -10,6 +10,21 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" />
 </head>
 <body>
+  <!-- toasts -->
+  <div role="alert" aria-live="assertive" aria-atomic="true" style="position:fixed;top:65px;right:10px;min-height:200px;">
+    <div style="position:absolute;top:0;right:0;" id="toast_container">
+      <!-- toast container -->
+      <div id="myToast" class="toast" style="min-width:300px;">
+        <div class="toast-header">
+          <strong class="mr-auto">Update Complete</strong>
+          <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="toast-body"><i class="far fa-edit"></i> Event flag added.</div>
+      </div>
+    </div>
+  </div>
   <!-- navbar -->
   <nav class="navbar fixed-top navbar-light" style="background-color:#dedede;">
     <div class="navbar-brand">
