Display current page with Auto-Refresh - Add a hidden div to store the current data page - Update the data-val of the current page div when page data is updated - When Data-Refresh checked set interval to call a function every 2 sec - Display the current page data-val in that function

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
         of
         <span id="total">##</span>
       </div>
+      <div id="current" class="d-none" data-val=""></div>
       <div class="col text-right">
         <button disabled id="next" class="btn btn-outline-secondary" type="button"><span class="d-none d-md-inline">Next </span><i class="fas fa-angle-right"></i></button>
         <button disabled id="last" class="btn btn-outline-secondary"><span class="d-none d-md-inline">Last </span><i class="fas fa-angle-double-right"></i></button>
