--- a/index.html
+++ b/index.html
@@ -27,12 +27,17 @@
       <span class="d-inline d-md-none">MODAS</span> 
       <span class="d-none d-md-inline" style="font-variant:small-caps;">Moving Object Detection Alert System</span>
     </div>
-    <button id="auto-refresh" type="button" class="btn btn-primary" data-val="false">
+    <ul class="navbar-nav ml-auto mx-5" id="signIn">
+      <li class="nav-item">
+          <a class="nav-link" href="#"><i class="fas fa-sign-in-alt"></i> Sign In</a>
+      </li>
+    </ul>
+    <button disabled id="auto-refresh" type="button" class="btn btn-primary" data-val="false">
       <i class="far fa-square"></i> Auto Refresh
     </button>
   </nav>
   <!-- content -->
-  <div class="container" style="margin-top:65px;">
+  <div class="container" id="content" style="display:none;margin-top:65px;">
     <table class="table table-sm table-striped table-shadow">
       <thead class="bg-success text-white">
           <tr><th class="text-center">Flag</th><th>Date</th><th>Time</th><th>Location</th></tr>
