Save token to cookie - Add js-cookie to the project and link to it in index.html - Save the token in a cookie that expires in 7 days (client.js) - Remove the call to getEvents in document.ready (client.js) - Add verifyToken function that displays the cookie - Call verifyToken after successful sign in and in document.ready

--- a/index.html
+++ b/index.html
@@ -98,6 +98,8 @@
   <script src="http://code.jquery.com/jquery-3.3.1.min.js"></script>
   <!-- bootstrap -->
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js" integrity="sha384-LtrjvnR4Twt/qOuYxE721u19sVFLVSA4hf/rRt6PrZTmiPltdZcI7q7PXQBYTKyf" crossorigin="anonymous"></script>
+  <!-- js-cookie -->
+  <script src="js-cookie.min.js"></script>
   <!-- custom javascript -->
   <script src="client.js"></script>
 </body>
